--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,7 +2,8 @@ name: CI
 
 on:
   push:
-    branches: [ develop ]
+    branches:
+      - develop
   pull_request:
     types:
       - opened
@@ -27,6 +28,11 @@ jobs:
         uses: gradle/gradle-build-action@v2
         with:
           arguments: build
+
+      - uses: codecov/codecov-action@v2
+        with:
+          files: build/reports/jacoco/test/jacocoTestReport.xml
+          fail_ci_if_error: true
 
       - uses: actions/upload-artifact@v2
         with:
