--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,8 @@ dependencies {
     bundleLib 'com.google.zxing:core:3.4.1'
     bundleLib 'com.google.zxing:javase:3.4.1'
 
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.13.1'
+
     // TODO: switch to "provided" scope?
     implementation 'org.jboss.logging:jboss-logging:3.4.3.Final'
     // configurations.compile.extendsFrom(configurations.bundleLib)
